Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58416

QtQuick Image: SVG Images are not properly scaled with High DPI Scaling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.2.3, 6.3.0 Alpha
    • 5.8.0
    • None
    • * Qt 5.8.0
      * QtQuick 2.8
      * Any Device, Tested on Manjaro (normal DPI) and Android 5.1 (high DPI)
    • b6f085a275c76912862463657c2a91e35bd8936b (qt/qtdeclarative/dev) f42d4593ef3fc95a7808db4b370a0b03fb940694 (qt/qtdeclarative/6.2)

      If you use the QtQuick Image on a device with a high-DPI scaling higher than 1, and set a size for a svg image, it will be loaded for the given size, and not the real, scaled size. Simple example:

      Image {
          anchors.centerIn: parent
          source: "https://storage.googleapis.com/material-icons/external-assets/v4/icons/svg/ic_autorenew_black_24px.svg"
      }
      

      If running on a normal display, it's fine. But on Android, for example, with the DPI-Scaling Factor 2 (automatic value), it becomes blurred, because it's loaded for 24x24 pixels, but drawn with the double resolution!

        For Gerrit Dashboard: QTBUG-58416
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            SkyCoder Felix Barz
            Votes:
            4 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: