Image: make default sourceSize respect DPR for scalable images

When loading SVGs where no sourceSize is set, we need to take the DPR
into account so that the image isn't upscaled when the DPR is greater
than 1.

Fixes: QTBUG-58416
Task-number: QTBUG-81018
Pick-to: 6.2
Change-Id: I4356407f63477594c1a057555bf0fb6dabdab415
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>